# time-managment-bot

./: .env  Dockerfile  Makefile  bot.py  docker-compose.yml  messages.py  mypy.ini  pylintrc  pyproject.toml  readme.md  rule.flake8
css/: chart.css
js/: chartRender.js  chartSettings.js  data.js  dataConverter.js
readme/: code_style_guide.md  cron_tasks.md  git.md
src/: __init__.py  db.py  handlers.py  main.py  singletones.py
src/front/css/: chart.css
src/front/html/: index.html
src/front/js/: chartSettings.js  data.js  dataConverter.js
src/front/static/js/: activityHandler.js  chartRender.js  chartSettings.js  data.js  dateHandler.js
src/handlers/: common.py  front_api.py  github.py  vk.py
src/logging/: configure.py  formatter.py  logging_config.yaml
src/services/: base.py  common.py  error.py  time.py  user_activity.py
src/services/github/: base.py  commit_parser.py  factory.py  github.py  simple_event_parser.py
src/services/vk/: vk.py  vk_online.py
src/tasks/: handlers.py  task.py
src/telebot/: bot.py  enums.py  handler.py  inline_keyboards.py  messages.py  states.py
src/telebot/States/: setAccountStates.py  setTimeStates.py
tests/: conftest.py  test_vk_online.py
tests/github_event_parsers/: conftest.py  test_github_commit_parser.py
tests/test_github_event_parsers/: test_github_commit_parser.py  test_simple_event_parser.py
