[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Булыгин Евгений Андреевич <ebulygin@ussc.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
aiopg = "^1.1.0"
SQLAlchemy = "^1.3.22"
SQLAlchemy-Utils = "^0.36.8"
async-cron = "^1.6.2"
aiohttp = "^3.7.3"
PyYAML = "^5.3.1"
pydantic = "^1.7.3"
pytest-mock = "^3.4.0"
pytest-asyncio = "^0.14.0"
aiogram = "^2.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.790"
flake8 = "^3.8.4"
black = "^20.8b1"
isort = "^5.7.0"
autoflake = "^1.4"
unify = "^0.5"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
